# ansys-dev-vision

./: .gitignore  CMakeLists.txt
data/: disk_2d.h5  disk_2d.xdmf  model.xdmf  model_3d.h5  model_3d.h5.bak  shell_3d.xdmf
doc/: learning-plan.md  part1.md  part2.md
doc/xdmf/: xdmf  xdmf.md
src/: hdf5-class.cpp  hdf5-test.cpp  helloworld.cpp  main-1.1.0.cpp  main-1.1.1.cpp  main-1.1.2.cpp  main-1.1.3.cpp  main-1.1.4.cpp  main-1.2.0.cpp  main-1.2.1.cpp  main-1.2.2.cpp  main-1.2.3.cpp  main-1.2.4.cpp  main-1.2.5.cpp  main-2.0.0.cpp  main-3.0.0.cpp  main-3.1.0.cpp
tools/: 2d-show-xdmf.py  3d-show-xdmf.py  unpack.py
